# Hausdorff_k2tree

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  a.txt  b.txt  main.cpp  ryu-kamata.cpp  ryu-kamata.h  utils.cpp  utils.h
IO/: InputAdapter.cpp  InputAdapter.h  OutputAdapter.cpp  OutputAdapter.h
K2tree/: K2tree.cpp  K2tree.h
Logs/: Codec.cpp  Codec.h  CompactLog.cpp  CompactLog.h  CompactLogColection.cpp  CompactLogColection.h  LogColection.cpp  LogColection.h  LogRP.cpp  LogRP.h  gamma.cpp  gamma.h
Snapshot/: AreaExpandida.cpp  AreaExpandida.h  K2tree.cpp  K2tree.h  LabelsMap.cpp  LabelsMap.h  PermMRRR.cpp  PermMRRR.h  Snapshot.cpp  Snapshot.h
Util/: Element.cpp  Element.h  Factory.cpp  Factory.h  HashIter.cpp  HashIter.h  HashMap.cpp  HashMap.h  Instant.cpp  Instant.h  LinkedList.cpp  LinkedList.h  ListIterator.cpp  ListIterator.h  ObjectTimePosition.cpp  ObjectTimePosition.h  Point.h  Queue.cpp  Queue.h  TemporalSecuence.cpp  TemporalSecuence.h  TimeMesure.cpp  utils.h
