cmake_minimum_required(VERSION 3.22)
project(hausdorff)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(IO)
include_directories(libcds/build-aux)
include_directories(libcds/include)
include_directories(Logs)
include_directories(Snapshot)
include_directories(Util)

add_executable(hausdorff
        IO/InputAdapter.cpp
        IO/InputAdapter.h
        IO/OutputAdapter.cpp
        IO/OutputAdapter.h
        libcds/build-aux/config.h
        libcds/include/Array.h
        libcds/include/BitmapsSequence.h
        libcds/include/BitSequence.h
        libcds/include/BitSequenceBuilder.h
        libcds/include/BitSequenceBuilderDArray.h
        libcds/include/BitSequenceBuilderRG.h
        libcds/include/BitSequenceBuilderRRR.h
        libcds/include/BitSequenceBuilderSDArray.h
        libcds/include/BitSequenceDArray.h
        libcds/include/BitSequenceRG.h
        libcds/include/BitSequenceRRR.h
        libcds/include/BitSequenceSDArray.h
        libcds/include/Coder.h
        libcds/include/cppUtils.h
        libcds/include/huff.h
        libcds/include/HuffmanCoder.h
        libcds/include/libcdsBasics.h
        libcds/include/libcdsBitString.h
        libcds/include/libcdsSDArray.h
        libcds/include/libcdsTrees.h
        libcds/include/Mapper.h
        libcds/include/MapperCont.h
        libcds/include/MapperNone.h
        libcds/include/MapperRev.h
        libcds/include/perm.h
        libcds/include/Permutation.h
        libcds/include/PermutationBuilder.h
        libcds/include/PermutationBuilderMRRR.h
        libcds/include/PermutationBuilderWT.h
        libcds/include/PermutationMRRR.h
        libcds/include/PermutationWT.h
        libcds/include/sdarraySadakane.h
        libcds/include/Sequence.h
        libcds/include/SequenceAlphPart.h
        libcds/include/SequenceBuilder.h
        libcds/include/SequenceBuilderAlphPart.h
        libcds/include/SequenceBuilderGMR.h
        libcds/include/SequenceBuilderGMRChunk.h
        libcds/include/SequenceBuilderStr.h
        libcds/include/SequenceBuilderWaveletMatrix.h
        libcds/include/SequenceBuilderWaveletTree.h
        libcds/include/SequenceBuilderWaveletTreeNoptrs.h
        libcds/include/SequenceBuilderWaveletTreeNoptrsS.h
        libcds/include/SequenceGMR.h
        libcds/include/SequenceGMRChunk.h
        libcds/include/TableOffsetRRR.h
        libcds/include/timing.h
        libcds/include/WaveletMatrix.h
        libcds/include/WaveletTree.h
        libcds/include/WaveletTreeNoptrs.h
        libcds/include/WaveletTreeNoptrsS.h
        libcds/include/wt_coder.h
        libcds/include/wt_coder_binary.h
        libcds/include/wt_coder_huff.h
        libcds/include/wt_node.h
        libcds/include/wt_node_internal.h
        libcds/include/wt_node_leaf.h
        libcds/src/static/bitsequence/BitSequence.cpp
        libcds/src/static/bitsequence/BitSequenceBuilderDArray.cpp
        libcds/src/static/bitsequence/BitSequenceBuilderRG.cpp
        libcds/src/static/bitsequence/BitSequenceBuilderRRR.cpp
        libcds/src/static/bitsequence/BitSequenceBuilderSDArray.cpp
        libcds/src/static/bitsequence/BitSequenceDArray.cpp
        libcds/src/static/bitsequence/BitSequenceRG.cpp
        libcds/src/static/bitsequence/BitSequenceRRR.cpp
        libcds/src/static/bitsequence/BitSequenceSDArray.cpp
        libcds/src/static/bitsequence/sdarraySadakane.cpp
        libcds/src/static/bitsequence/TableOffsetRRR.cpp
        libcds/src/static/coders/huff.cpp
        libcds/src/static/coders/HuffmanCoder.cpp
        libcds/src/static/mapper/Mapper.cpp
        libcds/src/static/mapper/MapperCont.cpp
        libcds/src/static/mapper/MapperNone.cpp
        libcds/src/static/mapper/MapperRev.cpp
        libcds/src/static/permutation/perm.cpp
        libcds/src/static/permutation/Permutation.cpp
        libcds/src/static/permutation/PermutationBuilderMRRR.cpp
        libcds/src/static/permutation/PermutationBuilderWT.cpp
        libcds/src/static/permutation/PermutationMRRR.cpp
        libcds/src/static/permutation/PermutationWT.cpp
        libcds/src/static/sequence/BitmapsSequence.cpp
        libcds/src/static/sequence/Sequence.cpp
        libcds/src/static/sequence/SequenceAlphPart.cpp
        libcds/src/static/sequence/SequenceBuilderAlphPart.cpp
        libcds/src/static/sequence/SequenceBuilderGMR.cpp
        libcds/src/static/sequence/SequenceBuilderGMRChunk.cpp
        libcds/src/static/sequence/SequenceBuilderStr.cpp
        libcds/src/static/sequence/SequenceBuilderWaveletMatrix.cpp
        libcds/src/static/sequence/SequenceBuilderWaveletTree.cpp
        libcds/src/static/sequence/SequenceBuilderWaveletTreeNoptrs.cpp
        libcds/src/static/sequence/SequenceBuilderWaveletTreeNoptrsS.cpp
        libcds/src/static/sequence/SequenceGMR.cpp
        libcds/src/static/sequence/SequenceGMRChunk.cpp
        libcds/src/static/sequence/WaveletMatrix.cpp
        libcds/src/static/sequence/WaveletTree.cpp
        libcds/src/static/sequence/WaveletTreeNoptrs.cpp
        libcds/src/static/sequence/WaveletTreeNoptrsS.cpp
        libcds/src/static/sequence/wt_coder.cpp
        libcds/src/static/sequence/wt_coder_binary.cpp
        libcds/src/static/sequence/wt_coder_huff.cpp
        libcds/src/static/sequence/wt_node.cpp
        libcds/src/static/sequence/wt_node_internal.cpp
        libcds/src/static/sequence/wt_node_leaf.cpp
        libcds/src/utils/Array.cpp
        libcds/src/utils/cppUtils.cpp
        libcds/src/utils/libcdsBitString.cpp
        libcds/src/utils/timing.cpp
        Logs/Codec.cpp
        Logs/Codec.h
        Logs/CompactLog.cpp
        Logs/CompactLog.h
        Logs/CompactLogColection.cpp
        Logs/CompactLogColection.h
        Logs/gamma.cpp
        Logs/gamma.h
        Logs/LogColection.cpp
        Logs/LogColection.h
        Logs/LogRP.cpp
        Logs/LogRP.h
        Snapshot/AreaExpandida.cpp
        Snapshot/AreaExpandida.h
        Snapshot/LabelsMap.cpp
        Snapshot/LabelsMap.h
        Snapshot/PermMRRR.cpp
        Snapshot/PermMRRR.h
        Snapshot/Snapshot.cpp
        Snapshot/Snapshot.h
        Util/Element.cpp
        Util/Element.h
        Util/Factory.cpp
        Util/Factory.h
        Util/HashIter.cpp
        Util/HashIter.h
        Util/HashMap.cpp
        Util/HashMap.h
        Util/Instant.cpp
        Util/Instant.h
        Util/LinkedList.cpp
        Util/LinkedList.h
        Util/ListIterator.cpp
        Util/ListIterator.h
        Util/ObjectTimePosition.cpp
        Util/ObjectTimePosition.h
        Util/Point.cpp
        Util/Point.h
        Util/Queue.cpp
        Util/Queue.h
        Util/TemporalSecuence.cpp
        Util/TemporalSecuence.h
        Util/TimeMesure.cpp
        Util/TimeMesure.h
        utils.cpp
        ryu-kamata.cpp
        main.cpp
        MemoryMeasure.h)
